--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,9 +1,21 @@
 #nav-bar {
     display: flex;
-    width: 100%;
-    height: 100px;
-    background-color: rgb(148, 114, 70);
-    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    justify-content:space-around;
+}
+
+.icons {
+    width: 92px;
+    display: flex;
+    align-items: center;
+}
+
+.icon-cart {
+    width: 24px;
+    height: 24px;
+}
+
+.icon {
+    width: 18px;
+    height: 18px;
 }
