--- a/src/components/categories.css
+++ b/src/components/categories.css
@@ -1,7 +1,33 @@
-.icon-btn-text{
-
-}
 .categories-container{
+    /* display: flex; */
     display: flex;
+    width: 100%;
+    height: 226px;
+    padding: 16px 4px;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x:scroll;
+    gap:16px;
     
+}
+.categories-container::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
+}
+.category-btn{
+    min-width:323px;
+    height: 226px;
+    color:white;
+    border:none;
+    border-radius: 4px;
+}
+.purple{
+    background-color: rgba(166, 47, 129, 0.97);
+    
+}
+.orange{
+    background-color: rgba(237, 163, 129, 0.97);
+}
+.green{
+    background-color: rgba(58, 117, 121, 1);
 }
