--- a/src/components/categories.css
+++ b/src/components/categories.css
@@ -10,13 +10,19 @@
     gap:16px;
     
 }
+.category-text{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 300;
+    font-size:30px;
+
+}
 .categories-container::-webkit-scrollbar { /* WebKit */
     width: 0;
     height: 0;
 }
 .category-btn{
     min-width:323px;
-    height: 226px;
+    height: 150px;
     color:white;
     border:none;
     border-radius: 4px;
