--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Bungee&family=Quicksand:wght@300;400;500;600;700&family=Tilt+Warp&display=swap');
+
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Bungee', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-family: 'Tilt Warp', sans-serif;
 }
