--- a/src/components/productPage.css
+++ b/src/components/productPage.css
@@ -1,42 +1,120 @@
-.product-pic{
+.product-name {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.product-description {
+    font-weight: 500;
+    line-height: 150%;
+    font-size: 24px;
+}
+
+.product-pic {
     border-radius: 8px;
 }
 
-.main-container{
-    display: flex;
-    align-items: center;
-    background-color: aquamarine;
-    padding: 50px;
-}
-
-.product-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-}
-.info-container{
-    margin: 50px;
-    background-color: blue;
-    padding: 50px;
-}
-.details-container{
+.main-container {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
 }
 
-.ball-generic{
-    background-color: black;
+.product-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.info-container {
+    margin: 10px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 663px;
+}
+
+.details-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 37px;
+}
+
+.balls-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.ball-generic {
+    background-color: #D9D9D9;
     width: 20px;
     height: 20px;
     border-radius: 50%;
 }
 
-.ball-green{
-    background-color: black;
+.ball-green {
+    background-color: #8CB962;
     width: 20px;
     height: 20px;
     border-radius: 50%;
+}
+
+.ball-purple {
+    background-color: #A62F9A;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
+.btn-add {
+    width: 100%;
+    padding: 10px 54px;
+    gap: 10px;
+    border-radius: 8px;
+    background: #000;
+    color: white;
+    border: none;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+
+.btn-keep {
+    width: 100%;
+    padding: 10px 54px;
+    gap: 10px;
+    border-radius: 8px;
+    background: white;
+    border: 1px solid var(--Main-color, #3B7579);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.det-name {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.product-pic-suggestion-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.product-pic-suggestion {
+    width: 153px;
+    height: 143px;
+    border-radius: 8px;
 }
