--- a/src/components/categories.css
+++ b/src/components/categories.css
@@ -2,8 +2,8 @@
     /* display: flex; */
     display: flex;
     width: 100%;
-    height: 226px;
-    padding: 16px 4px;
+  
+    
     justify-content: space-between;
     align-items: center;
     overflow-x:scroll;
@@ -36,4 +36,13 @@
 }
 .green{
     background-color: rgba(58, 117, 121, 1);
+}
+
+@media only screen and (max-width: 400px) {
+
+    .category-btn{
+        min-width:200px;
+        height: 100px;
+       
+    }
 }
