--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-
-
 body{
   margin: 0;
   margin-left:24px;
@@ -8,3 +6,16 @@ body{
   box-sizing: border-box;
 }
 
+
+@media only screen and (max-width: 400px) {
+
+
+  body{
+    margin: 0;
+    margin-left:0px;
+    margin-right:0px;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  }
