--- a/src/components/categories.css
+++ b/src/components/categories.css
@@ -2,7 +2,7 @@
     /* display: flex; */
     display: flex;
     width: 100%;
-  
+    /* margin-left: 20%; */
     
     justify-content: space-between;
     align-items: center;
@@ -41,8 +41,20 @@
 @media only screen and (max-width: 400px) {
 
     .category-btn{
-        min-width:200px;
-        height: 100px;
-       
+        min-width:100px;
+        height: 50px;
+    }
+
+    .category-text{
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 300;
+        font-size:15px;
+    
+    }
+    .categories-container{
+        gap:10px;
+        width: 95%;
+        margin-left: 5%;
+        
     }
 }
