--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -26,3 +26,17 @@
 .footer-purple-text{
     color:#A62F9A;
 }
+
+
+@media only screen and (max-width: 400px) {
+
+.footer-flex{
+    margin-left: 24px;
+    margin-right: 24px;
+}
+.footer-text-center{
+   
+    font-size:16px;
+
+}
+}
