--- a/src/components/mainPicture.css
+++ b/src/components/mainPicture.css
@@ -1,15 +1,14 @@
 .mainpicture-container {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
-    /* height: calc(100vh - 447px); */
     height: calc(100vh - 408px);
-    /* height: 100vh; */
     flex-shrink: 0;
     border-radius: 8px;
-    /* position: relative; */
     text-align: center;
     color: white;
-    /* display: flex;
-    flex-direction: column; */
+    gap: 16px;
+
 }
 
 
@@ -21,7 +20,14 @@
     /* height: 50px; */
 
 }
-
+.mainpicture-desktop1{
+    width:50%;
+    object-fit: cover;
+}
+.mainpicture-desktop2{
+    width:50%;
+    object-fit: cover;
+}
 
 .mainpicture-mobile1 {
     display: none;
@@ -35,7 +41,8 @@
 
 @media only screen and (max-width: 400px) {
     .mainpicture-container {
-        height: auto;
+        /* height: auto; */
+        height: calc(100vh - 265px);
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -47,9 +54,10 @@
     }
 
     .mainpicture-mobile1 {
-        display: block;
-        width: 100%;
-        height: 280px;
+        display:flex;
+        width: 100%; 
+        height: 50%;
+        /* height: 280px; */
         flex-shrink: 0;
         border-radius: 8px;
         /* margin-bottom: 16px; */
@@ -57,11 +65,20 @@
     }
 
     .mainpicture-mobile2 {
-        display: block;
+        display: flex;
         width: 100%;
-        height: 280px;
+        /* height: 280px; */
+        height: 50%;
         flex-shrink: 0;
         border-radius: 8px;
         object-fit: cover;
     }
+
+    .mainpicture-desktop1{
+        display:none;
+    }
+    .mainpicture-desktop2{
+        display:none;
+    }
+    
 }
