--- a/src/components/productPage.css
+++ b/src/components/productPage.css
@@ -11,11 +11,15 @@
 }
 
 .product-pic {
+    width:50%;
+    height: 90%;
     border-radius: 8px;
+    object-fit: cover;
 }
 
 .main-container {
-    width: 100%;
+    width: 100vw;
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,6 +27,8 @@
 }
 
 .product-container {
+    width:50%;
+    height: calc(100vh - 256px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,7 +40,7 @@
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    width: 663px;
+    width: 50%;
 }
 
 .details-container {
@@ -117,4 +123,20 @@
     width: 153px;
     height: 143px;
     border-radius: 8px;
+}
+
+
+
+
+@media only screen and (max-width: 400px) {
+
+    .product-container {
+       
+       
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
 }
