--- a/src/components/productPage.css
+++ b/src/components/productPage.css
@@ -27,7 +27,7 @@
 }
 
 .product-container {
-    width:50%;
+    width:70%;
     height: calc(100vh - 256px);
     display: flex;
     align-items: center;
@@ -131,8 +131,7 @@
 @media only screen and (max-width: 400px) {
 
     .product-container {
-       
-       
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
